Fix background image positioning on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,8 +23,23 @@ $theme-colors: (
 // Import all of Bootstrap's styles
 @import "~bootstrap/scss/bootstrap";
 
-body {
+main {
+    position: relative;
+}
+
+main::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
     background: url("/waves.svg");
     background-repeat: no-repeat;
-    background-position: center;
+    background-size: cover;
+    z-index: -1;
+
+    @include media-breakpoint-up(lg) {
+        background-position: center;
+    }
 }
